--- a/Pipfile
+++ b/Pipfile
@@ -7,12 +7,18 @@ name = "pypi"
 ipdb = "0.13.9"
 flask = "*"
 flask-sqlalchemy = "3.0.3"
+sqlalchemy = "*"
 Werkzeug = "2.2.2"
 flask-migrate = "*"
 sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 faker = "*"
+flask-bcrypt = "*"
+flask-session = "*"
+flask-authlib-client = "*"
+requests = "*"
+python-dotenv = "*"
 
 [requires]
 python_full_version = "3.8.13"
